src/syntax/latex/snapshots/texlab__syntax__latex__parser__tests__biblatex_include_options.snap
---
source: src/syntax/latex/parser.rs
expression: "setup(r#\"\\addbibresource[foo=bar, baz]{foo/bar.bib}\"#)"

---
ROOT@0..42
  PREAMBLE@0..42
    BIBLATEX_INCLUDE@0..42
      BIBLATEX_INCLUDE_NAME@0..15 "\\addbibresource"
      BRACK_GROUP_KEY_VALUE@15..29
        L_BRACK@15..16 "["
        KEY_VALUE_BODY@16..28
          KEY_VALUE_PAIR@16..23
            KEY@16..19
              WORD@16..19 "foo"
            EQUALITY_SIGN@19..20 "="
            VALUE@20..23
              TEXT@20..23
                WORD@20..23 "bar"
          COMMA@23..24 ","
          WHITESPACE@24..25 " "
          KEY_VALUE_PAIR@25..28
            KEY@25..28
              WORD@25..28 "baz"
        R_BRACK@28..29 "]"
      CURLY_GROUP_WORD_LIST@29..42
        L_CURLY@29..30 "{"
        WORD@30..41 "foo/bar.bib"
        R_CURLY@41..42 "}"

