src/syntax/latex/snapshots/texlab__syntax__latex__parser__tests__block_comments.snap
---
source: src/syntax/latex/parser.rs
assertion_line: 1814
expression: "setup(r#\"Foo\n\\iffalse\nTest1\n\\fi\nBar\n\\iffalse\n\\fii\n\\fi\nBaz\"#)"
---
ROOT@0..48
  PREAMBLE@0..48
    TEXT@0..4
      WORD@0..3 "Foo"
      LINE_BREAK@3..4 "\n"
    BLOCK_COMMENT@4..22
      BEGIN_BLOCK_COMMENT_NAME@4..12 "\\iffalse"
      VERBATIM@12..19 "\nTest1\n"
      END_BLOCK_COMMENT_NAME@19..22 "\\fi"
    LINE_BREAK@22..23 "\n"
    TEXT@23..27
      WORD@23..26 "Bar"
      LINE_BREAK@26..27 "\n"
    BLOCK_COMMENT@27..44
      BEGIN_BLOCK_COMMENT_NAME@27..35 "\\iffalse"
      VERBATIM@35..41 "\n\\fii\n"
      END_BLOCK_COMMENT_NAME@41..44 "\\fi"
    LINE_BREAK@44..45 "\n"
    TEXT@45..48
      WORD@45..48 "Baz"

