src/syntax/latex/snapshots/texlab__syntax__latex__parser__tests__caption_error.snap
---
source: src/syntax/latex/parser.rs
expression: "setup(r#\"\\caption[qux]{Foo \\Bar Baz\"#)"

---
ROOT@0..26
  PREAMBLE@0..26
    CAPTION@0..26
      CAPTION_NAME@0..8 "\\caption"
      BRACK_GROUP@8..13
        L_BRACK@8..9 "["
        TEXT@9..12
          WORD@9..12 "qux"
        R_BRACK@12..13 "]"
      CURLY_GROUP@13..26
        L_CURLY@13..14 "{"
        TEXT@14..18
          WORD@14..17 "Foo"
          WHITESPACE@17..18 " "
        GENERIC_COMMAND@18..23
          GENERIC_COMMAND_NAME@18..22 "\\Bar"
          WHITESPACE@22..23 " "
        TEXT@23..26
          WORD@23..26 "Baz"
        MISSING@26..26 ""

