src/syntax/latex/snapshots/texlab__syntax__latex__parser__tests__caption_minimal_error.snap
---
source: src/syntax/latex/parser.rs
expression: "setup(r#\"\\caption{Foo \\Bar Baz\"#)"

---
ROOT@0..21
  PREAMBLE@0..21
    CAPTION@0..21
      CAPTION_NAME@0..8 "\\caption"
      CURLY_GROUP@8..21
        L_CURLY@8..9 "{"
        TEXT@9..13
          WORD@9..12 "Foo"
          WHITESPACE@12..13 " "
        GENERIC_COMMAND@13..18
          GENERIC_COMMAND_NAME@13..17 "\\Bar"
          WHITESPACE@17..18 " "
        TEXT@18..21
          WORD@18..21 "Baz"
        MISSING@21..21 ""

