src/syntax/latex/snapshots/texlab__syntax__latex__parser__tests__generic_command_args.snap
---
source: src/syntax/latex/parser.rs
expression: "setup(r#\"\\foo{bar}[qux]\"#)"

---
ROOT@0..14
  PREAMBLE@0..14
    GENERIC_COMMAND@0..14
      GENERIC_COMMAND_NAME@0..4 "\\foo"
      CURLY_GROUP@4..9
        L_CURLY@4..5 "{"
        TEXT@5..8
          WORD@5..8 "bar"
        R_CURLY@8..9 "}"
      BRACK_GROUP@9..14
        L_BRACK@9..10 "["
        TEXT@10..13
          WORD@10..13 "qux"
        R_BRACK@13..14 "]"

