src/syntax/latex/snapshots/texlab__syntax__latex__parser__tests__glossary_entry_definition_simple.snap
---
source: src/syntax/latex/parser.rs
expression: "setup(r#\"\\newglossaryentry{foo}{bar = baz, qux,}\"#)"

---
ROOT@0..39
  PREAMBLE@0..39
    GLOSSARY_ENTRY_DEFINITION@0..39
      GLOSSARY_ENTRY_DEFINITION_NAME@0..17 "\\newglossaryentry"
      CURLY_GROUP_WORD@17..22
        L_CURLY@17..18 "{"
        WORD@18..21 "foo"
        R_CURLY@21..22 "}"
      CURLY_GROUP_KEY_VALUE@22..39
        L_CURLY@22..23 "{"
        KEY_VALUE_BODY@23..38
          KEY_VALUE_PAIR@23..32
            KEY@23..27
              WORD@23..26 "bar"
              WHITESPACE@26..27 " "
            EQUALITY_SIGN@27..28 "="
            WHITESPACE@28..29 " "
            VALUE@29..32
              TEXT@29..32
                WORD@29..32 "baz"
          COMMA@32..33 ","
          WHITESPACE@33..34 " "
          KEY_VALUE_PAIR@34..37
            KEY@34..37
              WORD@34..37 "qux"
          COMMA@37..38 ","
        R_CURLY@38..39 "}"

