src/syntax/latex/snapshots/texlab__syntax__latex__parser__tests__graphics_include_complicated_options.snap
---
source: src/syntax/latex/parser.rs
assertion_line: 1547
expression: "setup(r#\"\\includegraphics[width=0.5\\textwidth]{}\"#)"

---
ROOT@0..39
  PREAMBLE@0..39
    GRAPHICS_INCLUDE@0..39
      GRAPHICS_INCLUDE_NAME@0..16 "\\includegraphics"
      BRACK_GROUP_KEY_VALUE@16..37
        L_BRACK@16..17 "["
        KEY_VALUE_BODY@17..36
          KEY_VALUE_PAIR@17..36
            KEY@17..22
              WORD@17..22 "width"
            EQUALITY_SIGN@22..23 "="
            VALUE@23..36
              TEXT@23..26
                WORD@23..26 "0.5"
              GENERIC_COMMAND@26..36
                GENERIC_COMMAND_NAME@26..36 "\\textwidth"
        R_BRACK@36..37 "]"
      CURLY_GROUP_WORD_LIST@37..39
        L_CURLY@37..38 "{"
        R_CURLY@38..39 "}"

